--- a/personal-finance-tracker/src/main/resources/application.properties
+++ b/personal-finance-tracker/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=personal-finance-tracker
 spring.datasource.url=jdbc:mysql://localhost:3306/finance_tracker
-spring.datasource.username=snannra03@gmail.com  
+spring.datasource.username=root
 spring.datasource.password=Bluefire49!@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
