trying to perform user signup

--- a/personal-finance-tracker/src/main/resources/application.properties
+++ b/personal-finance-tracker/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.password=Bluefire49!@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
+spring.security.filter.csrf.enabled=false
