--- a/personal-finance-tracker/src/main/resources/application.properties
+++ b/personal-finance-tracker/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
+server.port=8080
+logging.level.personal_finance_tracker=DEBUG
