--- a/personal-finance-tracker/src/main/resources/application.properties
+++ b/personal-finance-tracker/src/main/resources/application.properties
@@ -9,3 +9,4 @@ logging.level.org.springframework=DEBUG
 logging.level.org.hibernate=DEBUG
 server.port=8080
 logging.level.personal_finance_tracker=DEBUG
+logging.level.org.springframework.security=DEBUG
